# GraphicsAPI

./: .clang-format  Buffer.h  CMakeLists.txt  FixedPoint.h  IWindow.h  LICENSE  Math.h  README.md  main.cpp
Graphics/: BasicRasterizer.h  CMakeLists.txt  GraphicsPipe.cpp  GraphicsPipe.h  IGraphicsPipe.h  IRasterizer.h  VertexBuffer.h
Graphics/Shaders/: FragmentShader.h  FragmentShaderImpl.h  VertexShader.h  VertexShaderImpl.h
desktop/: CMakeLists.txt  DesktopBuffer.h  Desktop_window.h
pico/: CMakeLists.txt  Pico_Buffer.h  Pico_window.h
